--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.0.1",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
     "svelte": "^4.2.8",
+    "tailwindcss": "^3.4.0",
     "vite": "^5.0.8"
+  },
+  "dependencies": {
+    "@sveltejs/adapter-auto": "^3.0.1"
   }
 }
